Meu primeiro commit no git

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Aplicação
-APP_URL=https://clientebd.herokuapp.com/
+APP_URL=http://localhost:3000
 
 # Banco de Dados
 DB_HOST= bancotpjo.mysql.database.azure.com
